--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- repl name:  IlllIIllIllIllI  -->
 <!--  Goal: make a responsive landing page: Done
+        Goal: create home page for chore calendar
         Goal: build a backend for data
 
     Bugs:
