--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chore App</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +22,7 @@
     <div class= "container">
         <header>
             <!--always choose vector images opposed to jpeg and png-->
-          <!-- <img src="images/logo.svg" alt="26andfour logo" --> <h1 class= "logo">L O G O</h1>
+          <!-- <img src="images/logo.svg" alt="26andfour logo" --> <h1 class= "logo">Chore App</h1>
 
             <nav>
                 <a href = "#" class= "hide-desktop">
