set base calendar

--- a/index.html
+++ b/index.html
@@ -53,24 +53,28 @@
         </section> -->
     </div>
 
-    <div class= "blue-container">
-        <div class= "container">
+    <center> <div class= "blue-container">
+      <h1>January</h1>
+      <hr color="black">
+      <div class="container">
+        <a href="#" class="cta">Chores</a>
+    </div>
+        <!-- <div class= "container">
             <ul>
                 <li>
-                    <img src="images/icon-1.svg" alt="Calendar icon">
-                    <p>Design your project. </p>
+                    <p>January </p>
                 </li>
-                <li>
+                <!-- <li>
                     <img src="images/icon-2.svg" alt="Calendar icon">
                     <p>Build your project in one place. </p>
-                </li> 
-                <li>
-                    <img src="images/icon-3.svg" alt="Calendar icon">
+                </li> -->
+               <!-- <li> -->
+                    <!-- <img src="images/icon-3.svg" alt="Calendar icon">
                     <p>Deploy with your own domain. </p>
                 </li> 
             </ul>
-        </div>
-    </div>
+        </div> -->
+    </div> </center>
     <!-- <div class= "gray-container">
         <div class="container">
             <ul>
